--- a/src/index.css
+++ b/src/index.css
@@ -3,13 +3,14 @@
 @tailwind utilities;
 
 body {
-  background: linear-gradient(to right, #434343 0%, black 100%);
+  background: radial-gradient(
+    circle at 18.7% 37.8%,
+    rgb(250, 250, 250) 0%,
+    rgb(225, 234, 238) 90%
+  );
   color: whitesmoke;
   font-family: Arial, Helvetica, sans-serif;
 }
-.input-field {
-  @apply bg-custom shadow-custom  filter backdrop-blur;
-}
-.add-btn {
-  @apply shadow-custom  filter backdrop-blur;
+.handle-add-task {
+  display: flex;
 }
