--- a/src/index.css
+++ b/src/index.css
@@ -3,13 +3,21 @@
 @tailwind utilities;
 
 body {
-  background: radial-gradient(
-    circle at 18.7% 37.8%,
-    rgb(250, 250, 250) 0%,
-    rgb(225, 234, 238) 90%
+  background: rgb(222, 225, 237);
+  background: linear-gradient(
+    90deg,
+    rgba(222, 225, 237, 1) 14%,
+    rgba(159, 173, 211, 1) 58%,
+    rgba(175, 186, 218, 1) 73%,
+    rgba(159, 173, 211, 1) 89%
   );
+
   color: whitesmoke;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+* p {
+  font-size: 0.855rem;
 }
 .handle-add-task {
   display: flex;
